--- a/templates/monitoring/secrets.yml
+++ b/templates/monitoring/secrets.yml
@@ -7,5 +7,5 @@ metadata:
   name: grafana-admin
 type: Opaque
 data:
-  username: YWRtaW4=
-  password: cGVyaGFwc0NhbXBTZWFyY2hGcmVxdWVudGx5
+  username: #TODO
+  password: #TODO
