--- a/templates/tenants-api/postgres/pvc.yml
+++ b/templates/tenants-api/postgres/pvc.yml
@@ -5,59 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: rbd
+  storageClassName: rbd-new
   resources:
     requests:
       storage: 20Gi
-
-# 20201110 commenting - mpackard
-#---
-#apiVersion: batch/v1
-#kind: Job
-#metadata:
-#  name: mkdir-tenants-postgres-pvc
-#spec:
-#  ttlSecondsAfterFinished: 60
-#  template:
-#    spec:
-#      restartPolicy: Never
-#      containers:
-#      - name: mkdir-tenants-postgres-volume
-#        image: alpine:latest
-#        command:
-#        - mkdir 
-#        - /var/lib/postgresql/data
-#        volumeMounts:
-#        - name: tenants-pg-data
-#          mountPath: /var/lib/postgresql
-#      volumes:
-#      - name: tenants-pg-data
-#        persistentVolumeClaim:
-#          claimName: tenants-postgres-vol01
-#
-#---
-#apiVersion: batch/v1
-#kind: Job
-#metadata:
-#  name: chown-tenants-postgres-pvc
-#spec:
-#  ttlSecondsAfterFinished: 60
-#  template:
-#    spec:
-#      restartPolicy: Never
-#      containers:
-#      - name: chown-tenants-postgres-volume
-#        image: alpine:latest
-#        command:
-#        - chown
-#        - -R
-#        - 999:999
-#        - /var/lib/postgresql
-#        volumeMounts:
-#        - name: tenants-pg-data
-#          mountPath: /var/lib/postgresql
-#      volumes:
-#      - name: tenants-pg-data
-#        persistentVolumeClaim:
-#          claimName: tenants-postgres-vol01
-#
