--- a/Test/test_input.yml
+++ b/Test/test_input.yml
@@ -26,6 +26,8 @@ universal-parameters:
     service_url: https://admin.test.tapis.io
     service_tenant_id: admin
     service_site_id: tacc
+    tenants: ["dev", "admin"]
+    deployment: test
     storge_class: rbd-new
 
 actors:
@@ -108,6 +110,24 @@ admin:
     file_ext: ".yml"
     template: admin-config.j2
     data:
+  verification:
+    authenticator-test:
+      file_ext: ""
+      template: "authenticator-test.j2"
+      data:
+    streams-test:
+      file_ext: ""
+      template: "streams-test.j2"
+      data:
+    tenants-test:
+      file_ext: ""
+      template: "tenants-test.j2"
+      data:
+    tokens-test:
+      file_ext: ""
+      template: "tokens-test.j2"
+      data:
+        
 
 apps:
   service-parameters:
@@ -149,7 +169,7 @@ authenticator:
     file_ext: ".yml"
     template: authenticator-config.j2
     data:
-      "tenants": ["dev", "tacc", "admin"]
+      "tenants": ["dev", "admin"]
   api:
     api:
       file_ext: ".yml"
@@ -537,7 +557,6 @@ streams:
   service-parameters:
     data:
       service_name: "streams"
-      service_site_id: "user"
   streams-config:
     file_ext: ".yml"
     template: streams-config.j2
@@ -608,7 +627,6 @@ tenants-api:
   service-parameters:
     data:
       service_name: "tenants"
-      service_site_id: "user"
   tenants-config:
     file_ext: ".yml"
     template: tenants-config.j2
@@ -645,7 +663,7 @@ tokens-api:
     template: tokens-config.j2
     data:
       "use_sk": true
-      "tenants": ["dev", "tacc", "admin"]
+      "tenants": ["dev", "admin"]
       "log_level": "DEBUG"
       "show_traceback": false
   api:
