--- a/templates/tokens-api/add-token-roles.yml
+++ b/templates/tokens-api/add-token-roles.yml
@@ -21,5 +21,5 @@ spec:
         - name: service_tenant_base_url
           valueFrom:
             configMapKeyRef:
-              name: global-config
+              name: tokens-config
               key: service_tenant_base_url
