--- a/templates/files/postgres.yml
+++ b/templates/files/postgres.yml
@@ -28,13 +28,13 @@ spec:
         - name: TOKENS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: global-config
-              key: service_tenant_base_url
+              name: files-config
+              key: service_site_url
         - name: TENANTS_SERVICE_URL
           valueFrom:
             configMapKeyRef:
-              name: global-config
-              key: service_tenant_base_url
+              name: files-config
+              key: service_site_url
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
