--- a/defaults.yml
+++ b/defaults.yml
@@ -28,8 +28,6 @@ defaults:
     stern_pvc: "stern-data-vol01"
   pgrest:
     postgres_pvc: "pgrest-postgres-vol01"
-  rabbitmq:
-    pvc: "rabbitmq-vol01"
   security-kernel:
     postgres_pvc: "sk-postgres-vol01"
   streams:
@@ -43,4 +41,5 @@ defaults:
     postgres_pvc: "tenants-postgres-vol01"
   vault:
     pvc: "vault-vol01"
+    raft_storage: "true"
   # should volume names be a default, should they be a service level or local level parameter
