Changed tenants-api to tenants

--- a/input_files/test_input.yml
+++ b/input_files/test_input.yml
@@ -17,7 +17,7 @@ services:
   - skadmin
   - streams
   - systems
-  - tenants-api
+  - tenants
   - tokens
   - vault
 
@@ -741,7 +741,7 @@ systems:
       template: "pvc.j2"
       data:
 
-tenants-api:
+tenants:
   service-parameters:
     data:
       service_name: "tenants"
